@@ -26,6 +26,7 @@
     <footer>
       powered by <a href="http://github.com/dreamr/ruby_slippers">ruby-slippers</a>
     </footer>
+    <script src="/js/tracking.js"></script>
   </body>
 </html>
 
