@@ -1,4 +1,6 @@
 CHANGELOG
 =========
 
-2011/06/22 * All dates are now yyyy/mm/dd
+2011/06/22 - All dates are now yyyy/mm/dd
+2011/06/22 - Article more link out of code into view
+2011/06/22 - Style fixes
